turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:4: error: value update is not a member of java.awt.Color
	getCouleurSol()=couleur
        ^